[package]
name = "evan-sphereJournalBackend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }
reqwest = { version = "0.12.12", features = ["json"] }
jsonwebtoken = "9"
dotenv = "0.15"
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
] }
http = "1.3.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
time = "0.3"
chrono = { version = "0.4", features = ["serde"] }
